<resources>
    <string name="app_name">WallX</string>

    <!--Application APIs-->
    <string name="parse_app_id">sKeTH0N1lTGNwNrw334LyT6lftwiSITeTZsaMjtp</string>
    <string name="parse_client_key">6E9W5JaaEbk4xDZnpx0vTwzuivi5NfDaNPJrr5kF</string>
    <string name="facebook_app_id">903176379773273</string>
    <string name="twitter_consumer_key">YOUR_TWITTER_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret">YOUR_TWITTER_CONSUMER_SECRET</string>

    <!-- Monetization -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Navigation Items -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Uploads</string>
    <string name="nav_about">About</string>
    <string name="nav_collection">Collection</string>
    <string name="nav_downloads">Downloads</string>
    <string name="nav_setting">Setting</string>

    <string name="password_reset_text">Forgot Password?</string>
    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>user_friends</item>
    </string-array>


    <string name="home.no_result">No result found</string>

    <!-- General -->
    <string name="general.login.notice">Please login to see content</string>


    <!-- Intro -->
    <string name="intro.slide1.title">WallX</string>
    <string name="intro.slide1.description">Your ultimate wallpaper application</string>
    <string name="intro.slide2.title">Easy Customization</string>
    <string name="intro.slide2.description">This app Intro is easy to customize. So do other parts of the source.</string>
    <string name="intro.slide3.title">Sold on Envato</string>
    <string name="intro.slide3.description">This item is sold exclusively on Codecanyon</string>



    <!-- Submission -->
    <string name="submission.button.submit">Submit</string>
    <string name="submission.button.cancel">Cancel</string>
    <string name="submission.hint.tag">Add tag</string>
    <string name="submission.validation.category">Please select a category</string>
    <string name="submission.snack.error.upload">Failed to upload image to Parse.</string>
    <string name="submission.snack.error.submission">Failed to submit wallpaper to Parse.</string>
    <string name="submission.snack.error.choose">Failed to choose image</string>

    <!-- Details -->
    <string name="detail.snack.save.success">Successfully saved wallpaper</string>
    <string name="detail.snack.save.failure">Failed to save wallpaper</string>
    <string name="detail.snack.set.success">Successfully set as wallpaper</string>
    <string name="detail.snack.set.failure">Failed to set as wallpaper</string>
    <string name="detail.snack.like.success">Added to Favourites</string>
    <string name="detail.snack.like.failure">Failed to add to Favourites</string>
    <string name="detail.snack.button.not_ready">The resource is not ready to process</string>
    <string name="detail.snack.login_required">Please login to perform this action</string>

    <string name="detail.action.set.text">Set as Wallpaper</string>
    <string name="detail.action.save.text">Save to Storage</string>
    <string name="detail.action.favourite.text">Add to Favourites</string>

    <!-- About -->
    <string name="about.text.made_with">Made with </string>
    <string name="about.text.by"> by Benten Studio</string>
    <string name="about.text.codecanyon">A project sold on Codecanyon</string>

    <!-- Setting -->
    <string name="setting.snack.login.facebook.success">Successfully login with Facebook</string>
    <string name="setting.snack.login.facebook.failure">Failed to login with Facebook</string>
    <string name="setting.snack.logout.failure">Failed to logout</string>

    <!-- Settings -->
    <string name="settings.category.social">Social Accounts</string>
    <string name="settings.category.logout">Account Setting</string>

    <string name="settings.key.facebook">Social.Facebook</string>
    <string name="settings.key.account">Account.Auth</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_submission">SubmissionActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_crop">CropActivity</string>
    <string name="title_activity_catalog">CatalogActivity</string>
</resources>
