<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

      <group android:checkableBehavior="single">
            <item
                android:id="@+id/navHome"
                android:icon="@drawable/ic_home_grey_500_18dp"
                android:checked="false"
                android:title="@string/nav_home"/>
            <item
                android:id="@+id/navProfile"
                android:icon="@drawable/ic_account_circle_grey_500_18dp"
                android:checked="false"
                android:title="@string/nav_profile"/>

            <item
                android:id="@+id/navCollection"
                android:icon="@drawable/ic_collections_grey_500_18dp"
                android:checked="false"
                android:title="@string/nav_collection"/>
            <item
                android:id="@+id/navAbout"
                android:icon="@drawable/ic_info_outline_grey_500_18dp"
                android:checked="false"
                android:title="@string/nav_about"/>
            <item
                android:id="@+id/navSetting"
                android:icon="@drawable/ic_settings_applications_grey_500_18dp"
                android:checked="false"
                android:title="@string/nav_setting"/>

      </group>

</menu>